tests/ui/typech/generic_type_method_instance_call_returned_type_incomp.stderr
× error[LM4001]: mismatched types
    ╭─[generic_type_method_instance_call_returned_type_incomp.lm:12:22]
 11 │
 12 │     let _: Int32 = a.bar(false);
    │                      ^^^^^^^^^^^ expected type Int32, but found type Boolean...
 13 │ }
    ∶
 11 │
 12 │     let _: Int32 = a.bar(false);
    │            ^^^^^ ...because of type defined here
 13 │ }
    ╰──
   help: expected type Int32
            found type Boolean