tests/ui/typech/generic_type_method_instance_call_returned_type_incomp.lm
struct A<T> {}

impl<T> A<T> {
    pub fn bar(self, val: T) -> T {
        return val;
    }
}

fn bar() {
    let a: A<Boolean> = A<Boolean> { };

    let _: Int32 = a.bar(false);
}
